# TimGameLib

./: CMakeLists.txt  LICENSE  README.md
CMake/: TimGameLib.cmake
MacResources/: TimGameLib-Info.plist
Source/: CAnimatedSprite.cpp  CAnimatedSprite.hpp  CConfigInterpreter.cpp  CConfigInterpreter.hpp  CEventListener.cpp  CEventListener.hpp  CEventPublisher.cpp  CEventPublisher.hpp  CGame.cpp  CGame.hpp  CGameLocation.hpp  CInput.cpp  CInput.hpp  CInputListInterpreter.cpp  CInputListInterpreter.hpp  CLine.cpp  CLine.hpp  CMenu.cpp  CMenu.hpp  CMessageBroadcaster.hpp  CMessageListener.hpp  CObservable.cpp  CObservable.hpp  CObserver.hpp  CRenderable.hpp  CTextMenu.cpp  CTextMenu.hpp  CTextureBank.cpp  CTextureBank.hpp  CUpdateable.hpp  CXMLInterpreter.cpp  CXMLInterpreter.hpp  CollisionHandler.cpp  CollisionHandler.hpp  DebugOptions.cpp  DebugOptions.hpp  GameOptions.cpp  GameOptions.hpp  GameState.hpp  Macros.hpp  (+10 more)
Source/GUIMenu/: CButtonWidget.cpp  CButtonWidget.hpp  CGUIMenu.cpp  CGUIMenu.hpp  CInputWidget.cpp  CInputWidget.hpp  CPickerWidget.cpp  CPickerWidget.hpp  CSliderWidget.cpp  CSliderWidget.hpp  CToggleWidget.cpp  CToggleWidget.hpp  CWidget.cpp  CWidget.hpp
Source/SFMLIntegration/: CCircleShape.cpp  CCircleShape.hpp  CClock.cpp  CClock.hpp  CColour.cpp  CColour.hpp  CConvexShape.cpp  CConvexShape.hpp  CDrawable.cpp  CDrawable.hpp  CEvent.hpp  CFloatRect.cpp  CFloatRect.hpp  CFont.cpp  CFont.hpp  CImage.cpp  CImage.hpp  CIntRect.cpp  CIntRect.hpp  CJoystick.hpp  CKeyboard.hpp  CMouse.hpp  (+24 more)
TimGameLib.xcodeproj/: project.pbxproj
cmake/: TimGameLib.cmake
(+29 files in other folders)
